--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'harbor.biz.com/public/maven-custom:3.6.3-jdk-11-openj9'
-            args '-v /root/.m2:/root/.m2'
+            args '-v /root/.m2:/usr/share/maven/ref'
         }
     }
     stages {
