--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
               <mainClass>com.mycompany.app.App</mainClass>
             </manifest>
           </archive>
+          <source>9</source>
+          <target>9</target>
         </configuration>
       </plugin>
     </plugins>
